--- a/style.css
+++ b/style.css
@@ -1,16 +1,95 @@
-/* Type your code here */
-
-
-/* change the font family and spacing as per your project font */
-.footer{
-    display:flex;
-    flex-direction: row;
-    align-content: flex-end;
-	position: relative;
-	top: 750px;
-	margin-left: 80px;
-	font-size: 18px;
-	font-family: Nunito Sans;
-    font-style: normal;
-    
+*
+{
+    margin:5px;
 }
+.logo
+{
+    margin-left:  80%;
+}
+h1, h3{
+    text-shadow: 5px 5px 5px grey;
+}
+body {
+    background-image: url("assets/background-image1.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+table{
+    border:1px solid black;
+    text-align: left;
+    background-color: white;
+    table-layout: auto;
+    width: 60%;
+    height: auto;
+}
+#head
+{
+    color: white;
+}
+table, td, th
+{
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-collapse: collapse;
+}
+td, th{
+    padding: 5px;
+}
+footer{
+    height: 40px;
+    background-color: rgb(243, 72, 72);
+    width: 60%;
+    margin-top:7%
+}
+.button {
+    border: none;
+    color: rgb(15, 15, 15);
+    text-align: center;
+    text-decoration: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  .button:hover {
+    background-color: rgb(206, 56, 56);
+    border-radius: 20px;
+    color: white;
+  }
+  .popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* The actual popup */
+  .popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    top:-500%;
+    left:50%;
+    bottom:300%;
+    margin-top: 125%;
+    margin-left: 50%;
+  }
+  
+  /* Popup arrow */
+  .popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 100%;
+    right:100%;
+    bottom:100%;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
